# pathmap

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
src/pathmap/: __init__.py  pathmap.py
tests/: test_pathmap.py
